src/snapshots/purs_oxide__parser__tests__parse_record_expr-3.snap
---
source: src/parser.rs
expression: "parse_expr(r#\" { foo } \"#)"
---
Located(
    SourceSpan {
        start: 1,
        end: 8,
    },
    Literal(
        Object(
            [
                (
                    Symbol {
                        text: "foo",
                    },
                    Located(
                        SourceSpan {
                            start: 3,
                            end: 6,
                        },
                        Var(
                            QualifiedName {
                                module: None,
                                name: Symbol {
                                    text: "foo",
                                },
                            },
                        ),
                    ),
                ),
            ],
        ),
    ),
)
