src/snapshots/purs_oxide__parser__tests__parse_record_expr-4.snap
---
source: src/parser.rs
expression: "parse_expr(r#\" { foo, bar: 2 } \"#)"
---
Located(
    SourceSpan {
        start: 1,
        end: 16,
    },
    Literal(
        Object(
            [
                (
                    Symbol {
                        [salsa id]: 0,
                        text: "foo",
                    },
                    Located(
                        SourceSpan {
                            start: 3,
                            end: 6,
                        },
                        Var(
                            QualifiedName {
                                [salsa id]: 0,
                                module: None,
                                name: Symbol {
                                    [salsa id]: 0,
                                    text: "foo",
                                },
                            },
                        ),
                    ),
                ),
                (
                    Symbol {
                        [salsa id]: 1,
                        text: "bar",
                    },
                    Located(
                        SourceSpan {
                            start: 13,
                            end: 14,
                        },
                        Literal(
                            Integer(
                                2,
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ),
)
