src/snapshots/purs_oxide__parser__tests__parse_row_1.snap
---
source: src/parser.rs
expression: "parse_type(\"( foo :: Int, \\\"Bar\\\" :: String, data :: Int )\")"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 44,
    },
    Row {
        fields: [
            (
                Symbol {
                    text: "foo",
                },
                Located(
                    SourceSpan {
                        decl: Module(
                            ModuleId {
                                name: "Test",
                            },
                        ),
                        start: 9,
                        end: 12,
                    },
                    TypeConstructor(
                        QualifiedName {
                            module: None,
                            name: Symbol {
                                text: "Int",
                            },
                        },
                    ),
                ),
            ),
            (
                Symbol {
                    text: "Bar",
                },
                Located(
                    SourceSpan {
                        decl: Module(
                            ModuleId {
                                name: "Test",
                            },
                        ),
                        start: 23,
                        end: 29,
                    },
                    TypeConstructor(
                        QualifiedName {
                            module: None,
                            name: Symbol {
                                text: "String",
                            },
                        },
                    ),
                ),
            ),
            (
                Symbol {
                    text: "data",
                },
                Located(
                    SourceSpan {
                        decl: Module(
                            ModuleId {
                                name: "Test",
                            },
                        ),
                        start: 39,
                        end: 42,
                    },
                    TypeConstructor(
                        QualifiedName {
                            module: None,
                            name: Symbol {
                                text: "Int",
                            },
                        },
                    ),
                ),
            ),
        ],
        rest: None,
    },
)
