src/snapshots/purs_oxide__parser__tests__parse_row_2.snap
---
source: src/parser.rs
expression: "parse_type(\"( foo :: Int | e )\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 18,
    },
    Row {
        fields: [
            (
                Symbol {
                    [salsa id]: 0,
                    text: "foo",
                },
                Located(
                    SourceSpan {
                        start: 9,
                        end: 12,
                    },
                    TypeConstructor(
                        QualifiedName {
                            symbol: Symbol {
                                [salsa id]: 1,
                                text: "Int",
                            },
                            actually_qualified: false,
                        },
                    ),
                ),
            ),
        ],
        rest: Some(
            Located(
                SourceSpan {
                    start: 15,
                    end: 16,
                },
                Var(
                    Symbol {
                        [salsa id]: 2,
                        text: "e",
                    },
                ),
            ),
        ),
    },
)
