src/snapshots/purs_oxide__parser__tests__range_operator.snap
---
source: src/parser.rs
expression: "parse_expr(\"1..5\")"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 4,
    },
    Infix(
        Located(
            SourceSpan {
                decl: Module(
                    ModuleId {
                        name: "Test",
                    },
                ),
                start: 0,
                end: 1,
            },
            Literal(
                Integer(
                    1,
                ),
            ),
        ),
        [
            (
                Symbol(
                    QualifiedName {
                        module: None,
                        name: Symbol {
                            text: "..",
                        },
                    },
                ),
                Located(
                    SourceSpan {
                        decl: Module(
                            ModuleId {
                                name: "Test",
                            },
                        ),
                        start: 3,
                        end: 4,
                    },
                    Literal(
                        Integer(
                            5,
                        ),
                    ),
                ),
            ),
        ],
    ),
)
