src/snapshots/purs_oxide__parser__tests__record_update_1.snap
---
source: src/parser.rs
expression: "parse_expr(\"r { x = 1 }\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 11,
    },
    App(
        Located(
            SourceSpan {
                start: 2,
                end: 11,
            },
            RecordUpdate(
                Located(
                    SourceSpan {
                        start: 0,
                        end: 1,
                    },
                    Var(
                        QualifiedName(
                            Symbol(
                                "r",
                            ),
                        ),
                    ),
                ),
                [
                    (
                        Symbol(
                            "x",
                        ),
                        Located(
                            SourceSpan {
                                start: 8,
                                end: 9,
                            },
                            Literal(
                                Integer(
                                    1,
                                ),
                            ),
                        ),
                    ),
                ],
            ),
        ),
        [],
    ),
)
