src/snapshots/purs_oxide__parser__tests__record_update_2.snap
---
source: src/parser.rs
expression: "parse_expr(\"f r { x = 1, y = 2, \\\"random label\\\" = 3 }\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 40,
    },
    App(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            Var(
                QualifiedName {
                    symbol: Symbol {
                        [salsa id]: 0,
                        text: "f",
                    },
                    actually_qualified: false,
                },
            ),
        ),
        [
            Located(
                SourceSpan {
                    start: 4,
                    end: 40,
                },
                RecordUpdate(
                    Located(
                        SourceSpan {
                            start: 2,
                            end: 3,
                        },
                        Var(
                            QualifiedName {
                                symbol: Symbol {
                                    [salsa id]: 1,
                                    text: "r",
                                },
                                actually_qualified: false,
                            },
                        ),
                    ),
                    [
                        (
                            Symbol {
                                [salsa id]: 2,
                                text: "x",
                            },
                            Located(
                                SourceSpan {
                                    start: 10,
                                    end: 11,
                                },
                                Literal(
                                    Integer(
                                        1,
                                    ),
                                ),
                            ),
                        ),
                        (
                            Symbol {
                                [salsa id]: 3,
                                text: "y",
                            },
                            Located(
                                SourceSpan {
                                    start: 17,
                                    end: 18,
                                },
                                Literal(
                                    Integer(
                                        2,
                                    ),
                                ),
                            ),
                        ),
                        (
                            Symbol {
                                [salsa id]: 4,
                                text: "random label",
                            },
                            Located(
                                SourceSpan {
                                    start: 37,
                                    end: 38,
                                },
                                Literal(
                                    Integer(
                                        3,
                                    ),
                                ),
                            ),
                        ),
                    ],
                ),
            ),
        ],
    ),
)
