src/snapshots/purs_oxide__parser__tests__record_update_3.snap
---
source: src/parser.rs
expression: "parse_expr(\"f r { x = 1 } { y: 2 } q\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 24,
    },
    App(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            Var(
                QualifiedName {
                    module: None,
                    name: Symbol {
                        text: "f",
                    },
                },
            ),
        ),
        [
            Located(
                SourceSpan {
                    start: 4,
                    end: 13,
                },
                RecordUpdate(
                    Located(
                        SourceSpan {
                            start: 2,
                            end: 3,
                        },
                        Var(
                            QualifiedName {
                                module: None,
                                name: Symbol {
                                    text: "r",
                                },
                            },
                        ),
                    ),
                    [
                        (
                            Symbol {
                                text: "x",
                            },
                            Located(
                                SourceSpan {
                                    start: 10,
                                    end: 11,
                                },
                                Literal(
                                    Integer(
                                        1,
                                    ),
                                ),
                            ),
                        ),
                    ],
                ),
            ),
            Located(
                SourceSpan {
                    start: 14,
                    end: 22,
                },
                Literal(
                    Object(
                        [
                            (
                                Symbol {
                                    text: "y",
                                },
                                Located(
                                    SourceSpan {
                                        start: 19,
                                        end: 20,
                                    },
                                    Literal(
                                        Integer(
                                            2,
                                        ),
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
            ),
            Located(
                SourceSpan {
                    start: 23,
                    end: 24,
                },
                Var(
                    QualifiedName {
                        module: None,
                        name: Symbol {
                            text: "q",
                        },
                    },
                ),
            ),
        ],
    ),
)
