src/snapshots/purs_oxide__parser__tests__role_decl.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(\"\n        module Test where\n        type role Foo phantom representational nominal\n        \"))"
---
Located(
    SourceSpan {
        start: 0,
        end: 65,
    },
    Commented(
        [],
        ModuleInner {
            name: ModuleId {
                [salsa id]: 0,
                name: "Test",
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 64,
                    },
                    Commented(
                        [],
                        Role(
                            RoleDeclarationData {
                                ident: Symbol {
                                    [salsa id]: 0,
                                    text: "Foo",
                                },
                                role: [
                                    Phantom,
                                    Representational,
                                    Nominal,
                                ],
                            },
                        ),
                    ),
                ),
            ],
        },
    ),
)
