src/snapshots/purs_oxide__parser__tests__type_operator_2.snap
---
source: src/parser.rs
expression: "parse_type(\"a -> b ~> c -> d\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 16,
    },
    FunctionType(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            Var(
                Symbol {
                    text: "a",
                },
            ),
        ),
        Located(
            SourceSpan {
                start: 5,
                end: 16,
            },
            FunctionType(
                Located(
                    SourceSpan {
                        start: 5,
                        end: 11,
                    },
                    Infix(
                        Located(
                            SourceSpan {
                                start: 5,
                                end: 6,
                            },
                            Var(
                                Symbol {
                                    text: "b",
                                },
                            ),
                        ),
                        [
                            (
                                QualifiedName {
                                    module: None,
                                    name: Symbol {
                                        text: "~>",
                                    },
                                },
                                Located(
                                    SourceSpan {
                                        start: 10,
                                        end: 11,
                                    },
                                    Var(
                                        Symbol {
                                            text: "c",
                                        },
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 15,
                        end: 16,
                    },
                    Var(
                        Symbol {
                            text: "d",
                        },
                    ),
                ),
            ),
        ),
    ),
)
