src/snapshots/purs_oxide__parser__tests__type_operator_3.snap
---
source: src/parser.rs
expression: "parse_type(\"a - b\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 5,
    },
    Infix(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            Var(
                Symbol {
                    [salsa id]: 0,
                    text: "a",
                },
            ),
        ),
        [
            (
                QualifiedName {
                    symbol: Symbol {
                        [salsa id]: 1,
                        text: "-",
                    },
                    actually_qualified: false,
                },
                Located(
                    SourceSpan {
                        start: 4,
                        end: 5,
                    },
                    Var(
                        Symbol {
                            [salsa id]: 2,
                            text: "b",
                        },
                    ),
                ),
            ),
        ],
    ),
)
